Cleanup stuff.  archive technique for web pages, bugfixes, data fixes

--- a/lib/i3/i3.config
+++ b/lib/i3/i3.config
@@ -5,9 +5,9 @@ $I3CONFIG
 # This information can be edited online using 'i3config'
 thismud      WileyMUD
 autoconnect  1
-telnet       wiley.shadowlord.org
-web          http://wiley.shadowlord.org/
-adminemail   quixadhal@shadowlord.org
+telnet       wileymud.themud.org
+web          http://wileymud.themud.org/~wiley/
+adminemail   quixadhal@wileymud.themud.org
 openstatus   Idle
 mudtype      DikuMUD
 minlevel     1
