--- a/etc/systemd/wileymud.service
+++ b/etc/systemd/wileymud.service
@@ -10,7 +10,7 @@ After=diskworld.service
 [Service]
 Type=oneshot
 User=wiley
-Group=wiley
+Group=users
 Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 WorkingDirectory=/home/wiley/bin
