--- a/etc/systemd/wileymud_driver.service
+++ b/etc/systemd/wileymud_driver.service
@@ -9,7 +9,7 @@ After=wileymud.service
 [Service]
 Type=simple
 User=wiley
-Group=wiley
+Group=users
 Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 Environment=MALLOC_CHECK=2
