--- a/etc/systemd/dw_addr.service
+++ b/etc/systemd/dw_addr.service
@@ -6,7 +6,7 @@ After=diskworld.service
 [Service]
 Type=simple
 User=wiley
-Group=wiley
+Group=users
 Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 WorkingDirectory=/home/wiley/dw/bin
