--- a/etc/systemd/dw_driver.service
+++ b/etc/systemd/dw_driver.service
@@ -7,7 +7,7 @@ After=dw_addr.service
 [Service]
 Type=simple
 User=wiley
-Group=wiley
+Group=users
 Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 WorkingDirectory=/home/wiley/dw/bin
