Added wileymud status to Uptime entry of server page

--- a/etc/systemd/wileymud_driver.service
+++ b/etc/systemd/wileymud_driver.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=WileyMUD III Game Driver
-Documentation=http://wileymud.themud.org/~wiley/i3log.php
+Documentation=http://wileymud.themud.org/~wiley/log/
 PartOf=wileymud.service
 Requires=postgresql.service
 After=postgresql.service
