Made I3 daily summary optional

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -35,6 +35,7 @@ ID_LIB		= -L$(IDENTDIR) -lident
 PCRE_LIB	= -lpcre
 IMC_INC		= #-DIMC -DIMCWILEY
 I3_INC		= -DI3
+I3_REMIND	= #-DI3_DAILY
 DISCORD_INC	= #-DDISCORD
 OLD_MD5		= -DOPENSSL_API_COMPAT=10101
 
@@ -69,7 +70,7 @@ EFENCE		= #-lpthread -lefence
 PROF_FLAG	= #-pg
 DYN_FLAG	= -rdynamic
 
-INC		= -Iinclude $(ID_INC) $(IMC_INC) $(I3_INC) $(DISCORD_INC) $(SQL_INC) $(OLD_MD5) $(CURL_INC) $(WS_INC)
+INC		= -Iinclude $(ID_INC) $(IMC_INC) $(I3_INC) $(I3_REMIND) $(DISCORD_INC) $(SQL_INC) $(OLD_MD5) $(CURL_INC) $(WS_INC)
 LIB		= $(ID_LIB) $(NEED_MATH) $(NEED_SSL) $(NEED_CRYPT) $(NEED_COMPAT) $(EFENCE) $(PCRE_LIB) $(SQL_LIB) $(CURL_LIB) $(WS_LIB)
 EXTRALIB	= $(NEED_MATH) $(NEED_CRYPT) $(NEED_COMPAT) $(EFENCE)
 
