--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -36,7 +36,7 @@ PCRE_LIB	= -lpcre
 IMC_INC		= #-DIMC -DIMCWILEY
 I3_INC		= -DI3
 I3_REMIND	= #-DI3_DAILY
-DISCORD_INC	= #-DDISCORD
+DISCORD_INC	= -DDISCORD
 OLD_MD5		= -DOPENSSL_API_COMPAT=10101
 
 HOSTTYPE	= $(shell arch)
